--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:s3": "node src/test-s3-upload.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.540.0",
+    "@aws-sdk/s3-request-presigner": "^3.540.0",
+    "@google-cloud/storage": "^7.9.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "playwright": "^1.41.2"
+    "playwright": "^1.41.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
