--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:s3": "node src/test-s3-upload.js"
+    "postinstall": "npx playwright install && npx playwright install-deps"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.540.0",
